Клубника не очень сочная сочная